<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/content"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@drawable/gradient_background"
android:gravity="center">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/voice_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/voice_title"
        android:textColor="@color/firmingWhite"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/voice_info"
        android:textColor="@android:color/white"
        android:fontFamily="@font/avenir_light"
        android:visibility="visible"/>


    <TextView
        android:id="@+id/phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="22sp"
        android:gravity="center"
        android:fontFamily="@font/raleway"
        android:padding="10dp"
        android:text="@string/voice_phrase"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        android:textColor="@android:color/white"
        android:fontFamily="@font/avenir_light"
        android:text="@string/voice_timer"/>


</LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/animation_view"
        android:layout_centerHorizontal="true"
        android:text="@string/voice_mode_sending"
        android:textColor="@color/firmingWhite"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



<RelativeLayout
    android:id="@+id/waveLY"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_alignParentBottom="true">

    <ImageButton
        android:id="@+id/record"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:onClick="toggleRecording"
        app:srcCompat="@drawable/record"
        style="@style/Widget.AppCompat.Button.Borderless"/>

</RelativeLayout>

</RelativeLayout>