<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/openAccountTB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/raleway"
        android:text="@string/start_open_account_title"
        android:textColor="@color/firmingWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/startAccountBT"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/firmingTransparent"
        android:drawableEnd="@drawable/vector_document"
        android:drawablePadding="10dp"
        android:fontFamily="@font/avenir_light"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/contract_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/firmingWhite"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formInfoTV" />


    <Button
        android:id="@+id/lopdBT"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/firmingTransparent"
        android:drawableEnd="@drawable/vector_document"
        android:drawablePadding="10dp"
        android:fontFamily="@font/avenir_light"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/contract_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/firmingWhite"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startAccountBT" />

    <Button
        android:id="@+id/moreInfoBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/firmingTransparent"
        android:drawableStart="@drawable/vector_add_box"
        android:fontFamily="@font/avenir_light"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/more_account_info"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/firmingWhite"
        android:visibility="invisible"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/startVerificationBT"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/formInfoTV"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/avenir_light"
        android:gravity="center"
        android:text="@string/new_account_info"
        android:textAlignment="center"
        android:textColor="@color/firmingWhite"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openAccountTB" />

    <Button
        android:id="@+id/startVerificationBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/raleway"
        android:textColor="@color/firmingGray"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"/>


</android.support.constraint.ConstraintLayout>

