<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Camera -->
    <com.otaliastudios.cameraview.CameraView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:keepScreenOn="true"
        app:cameraPlaySounds="true"
        app:cameraGrid="off"
        app:cameraCropOutput="false"
        app:cameraFacing="back"
        app:cameraFlash="off"
        app:cameraAudio="on"
        app:cameraGestureTap="focusWithMarker"
        app:cameraGestureLongTap="none"
        app:cameraGesturePinch="zoom"
        app:cameraGestureScrollHorizontal="exposureCorrection"
        app:cameraGestureScrollVertical="none"
        app:cameraJpegQuality="100"
        app:cameraSessionType="picture" />


    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@drawable/mask2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/dni_info"
            android:layout_width="245dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/avenir_light"
            android:gravity="center"
            android:text="@string/dni_info"
            android:textColor="@color/firmingWhite"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dni_title" />

        <TextView
            android:id="@+id/dni_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:text="@string/dni_title"
            android:textColor="@color/firmingWhite"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.057" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="118dp"
            android:layout_height="104dp"
            app:layout_constraintBottom_toTopOf="@+id/loading_text"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading.json"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/firmingWhite"
            android:layout_marginBottom="16dp"
            android:text="@string/searching_dni"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>